add_subdirectory(drivers/kscan)
add_subdirectory(drivers/display)

if(CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM AND (CONFIG_SHIELD_K3YB_IT OR CONFIG_SHIELD_K3YB_IT_OLED32 OR CONFIG_SHIELD_K3YB_IT_OLED128))
  zephyr_library()
  zephyr_library_sources(src/status_screen.c src/n3_logo.c src/n3_logo_32.c)
  zephyr_library_include_directories(${APPLICATION_SOURCE_DIR}/include)
  zephyr_library_link_libraries(LVGL)
endif()

if(CONFIG_K3YB_LED_MUX)
  zephyr_library_named(k3yb_led_mux)
  zephyr_library_sources(src/led_mux.c)
  zephyr_library_include_directories(${APPLICATION_SOURCE_DIR}/include)
endif()
